@startuml
class VolunteerWorkController {
    + VolunteerWorkController(context:DBContext)
    + <<async>> Create(template:VolunteerWork) : Task<ActionResult<string>>
    + <<async>> Get(id:string) : Task<ActionResult<string>>
    + <<async>> All() : Task<ActionResult<string>>
    + <<async>> Update(id:string, template:VolunteerWork) : Task<ActionResult<string>>
    + <<async>> UpdateAndFetchAll(id:string, template:VolunteerWork) : Task<ActionResult<string>>
    + <<async>> Delete(id:string) : Task<ActionResult<string>>
    + Exists(id:string) : bool
    + Settings() : string
}
class "IUserInterfaceCRUD`1"<T> {
}
class "GenericRepository`1"<T> {
}
ControllerBase <|-- VolunteerWorkController
"IUserInterfaceCRUD`1" "<VolunteerWork>" <|-- VolunteerWorkController
VolunteerWorkController --> "VolunteerWorkRepository<VolunteerWork>" "GenericRepository`1"
VolunteerWorkController --> "VolunteerRepository<Volunteer>" "GenericRepository`1"
VolunteerWorkController --> "EmployeeRepository<Employee>" "GenericRepository`1"
VolunteerWorkController --> "ProjectRepository<Project>" "GenericRepository`1"
VolunteerWorkController o-> "settings" JsonSerializerSettings
@enduml
